some improvements in sql 2